[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = [ "server", "backports", "http1", "runtime" ]}
tokio = { version = "1.28", features = [ "rt-multi-thread", "macros" ]}
